<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InżProjGeoLocalApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Rules</string>
    <string name="title_activity_no_internet">Warning</string>
    <string name="title_activity_no_gps">Warning</string>
    <string name="title_activity_rules">Rules</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_messenger">Messenger</string>
    <string name="title_activity_base"></string>
    <string name="noInternet">No Internet</string>
    <string name="noGps">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="yes">Yest</string>
    <string name="no">No</string>
    <string name="title_activity_main_login">Welcome in game</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_registry">Registration</string>
    <string name="title_activity_remind">Remind password</string>
    <string name="title_activity_no_user">No such user</string>
    <string name="title_activity_user_info">User informations</string>
    <string name="title_activity_start_game">Ready?</string>
    <string name="title_activity_task">Your task</string>
    <string name="title_activity_task_info">Current task informations</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm</string>
    <string name="registration_error">Matching error</string>
    <string name="send">Send</string>
    <string name="empty_mail">Setup mail to send new password</string>
    <string name="user_mail">E-mail:</string>
    <string name="login">Login</string>
    <string name="logout">Logout and exit</string>
    <string name="loin_name">Login:</string>
    <string name="task_name">Task name:</string>
    <string name="task_desc">Task description:</string>
    <string name="answer">Answer</string>
    <string name="received">Task is received</string>
    <string name="server_problem">Server problems</string>
    <string name="ok">OK</string>
    <string name="login_problem">Wrong password or user</string>
    <string name="no_game">No game right now, try later</string>
    <string name="reg_error">Such user already exist</string>
    <string name="id">ID:</string>
    <string name="start_tim">Start time:</string>
    <string name="curr_lon">Current longitude:</string>
    <string name="curr_lat">Current latitude:</string>
    <string name="task_lon">Task longitude:</string>
    <string name="task_lat">Task latitude:</string>
    <string name="wrong_answer">Wrong answer</string>
    <string name="title_activity_server_change">ServerChange</string>

</resources>
