<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="pl.polsl.marurb.geoLocApp.activities.login.RegistryActivity$PlaceholderFragment">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email1EditText"
        android:hint="@string/email"
        android:layout_marginBottom="38dp"
        android:layout_above="@+id/pass1EditText"
        android:layout_alignLeft="@+id/pass1EditText"
        android:layout_alignStart="@+id/pass1EditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email2EditText"
        android:hint="@string/email"
        android:layout_above="@+id/pass1EditText"
        android:layout_alignLeft="@+id/pass2EditText"
        android:layout_alignStart="@+id/pass2EditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/pass1EditText"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/email2EditText"
        android:layout_alignStart="@+id/email2EditText"
        android:hint="@string/password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/pass2EditText"
        android:hint="@string/password"
        android:layout_below="@+id/pass1EditText"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/registerButton"
        android:layout_below="@+id/pass2EditText"
        android:background="@drawable/button_background"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:onClick="remind" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginEditText"
        android:layout_above="@+id/email1EditText"
        android:layout_alignLeft="@+id/email1EditText"
        android:layout_alignStart="@+id/email1EditText"
        android:layout_alignRight="@+id/email1EditText"
        android:layout_alignEnd="@+id/email1EditText"
        android:hint="@string/login" />
</RelativeLayout>
